# DBKonn

./: .gitignore  Cargo.toml  README.md
app/: index.html  package.json  vite.config.ts
app/dist.prev/: index.html
app/dist.prev/assets/: index-BCocCbSK.js  index-DU_fVM57.css
app/src/: main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: commands.rs  connections.rs  lib.rs  main.rs  state.rs
app/src/components/: ConnectionModal.ts  DataGrid.ts  FilterBar.ts  RecordPanel.ts  SqlEditor.ts
app/src/lib/: filter.ts  ipc.ts  rowEdit.ts  sqlQuote.ts  store.ts  temporal.ts
app/src/styles/: global.css
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: connection.rs  error.rs  lib.rs  query.rs  schema.rs  validator.rs
core/src/drivers/: mod.rs  mssql.rs  mysql.rs  pg.rs  sqlite.rs
core/tests/: pg_integration.rs  sqlite_integration.rs
