[package]
name = "dbkonn-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
tiberius.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
sqlparser.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
