[package]
name = "dbkonn-app"
version.workspace = true
edition.workspace = true

[lib]
name = "dbkonn_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dbkonn-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dbkonn-core = { path = "../../core" }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
keyring = { version = "2" }
dirs = "5"
uuid.workspace = true

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
